Sat Nov  3 12:36:35 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/xmldecl.rb (REXML::XMLDecl): Stop using REXML::Encoding
	  module because XMLDecl doesn't convert encoding. This causes
	  removing XML encoding name normalization (encoding.upcase).
	  Encoding name in XML declaration is what user specifies.
	  I think this is reasonable change.
	* test/rexml/test_xml_declaration.rb: Add tests for the above change.

Sat Nov  3 12:18:35 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (recursive_equal): fix not to make invalid pointers when
	  self and other are resized to same size in #== of their elements.
	  [ruby-dev:46373] [Feature #6177]

Sat Nov  3 12:06:15 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_xml_declaration.rb (TestXmlDeclaration#test_*):
	  Remove needless prefix from test names.

Sat Nov  3 12:04:52 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_xml_declaration_parent_child.rb: Rename to ...
	* test/rexml/test_xml_declaration.rb: ... this.

Sat Nov  3 11:43:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* hash.c (rb_hash_delete): Correct grammar
	  Patch by Glenn Oppegard
	  [Fixes #208 Github]

Sat Nov  3 11:28:28 2012  Narihiro Nakamura  <authornari@gmail.com>

	* NEWS: add a news about GC::Profiler.raw_data.

Sat Nov  3 11:01:32 2012  Narihiro Nakamura  <authornari@gmail.com>

	* NEWS: add a news about rb_newobj_of() and NEWOBJ_OF().

Sat Nov  3 10:17:41 2012  Narihiro Nakamura  <authornari@gmail.com>

	* eval.c (f_current_dirname): add the new method for Kernel.
	  This method almotst same as File.dirname(__FILE__). One
	  different behavior is it returns nil when __FILE__ returns nil.
	  [Feature #3346]

	* NEWS:  ditto

	* test/ruby/test_method.rb: related test.

Sat Nov  3 09:03:34 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* test/ruby/test_refinement.rb (test_new_method_by_send,
	  test_new_method_by_method_object): add tests for Kernel#send and
	  Kernel#method with refinements.
