@@ -1,3 +1,13 @@
+Sat Nov  3 12:49:45 2012  Kouhei Sutou  <kou@cozmixng.org>
+
+	* lib/rexml/document.rb (REXML::Document#write): Document encoding
+	  option. Now different encoding between XML file's encoding and
+	  XML declaration's encodiong is support.
+	  [Feature #4872] (work in progress)
+	* lib/rexml/xmldecl.rb (REXML::XMLDecl#write): Always use XMLDecl's
+	  encoding.
+	* test/rexml/test_document.rb: Update tests for the above change.
+
 Sat Nov  3 12:36:35 2012  Kouhei Sutou  <kou@cozmixng.org>
 
 	* lib/rexml/xmldecl.rb (REXML::XMLDecl): Stop using REXML::Encoding
